# craft_your_destiny

./: README.md  pyproject.toml
src/: main.py
src/cyd_engine/: __init__.py  main.py
src/cyd_engine/core/: config.py  engine.py
src/cyd_engine/entities/: database.py
src/cyd_engine/render/: __init__.py  camera.py  grid_renderer.py  renderer.py  shapes.py  terrain_renderer  window.py
src/cyd_engine/ui/: dialogs.py
src/cyd_engine/world/: generator.py  models.py
tests/: test_renderer.py  test_window_fps.py  test_world_generator.py
