[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craft-your-destiny-engine"
version = "0.1.0"
description = "Lightweight procedural RPG engine scaffold with pyglet/OpenGL"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "craft_your_destiny" }]
dependencies = [
  "pyglet>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cyd-engine = "cyd_engine.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
